ptotoday.com (archived on 2006-06-15)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business;education",
  "char_count": 4817,
  "classifier_probability": 0.99,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 11.83,
  "homepage_snapshot_redirected_domain": "ptotoday.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20060407044452id_/http://www.ptotoday.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20060407044452id_/http%3A//ptotoday.com",
  "interval": "2006_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "ptotoday.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20060615074040id_/http%3A//www.ptotoday.com/privacy.html",
  "policy_title": "Our Privacy Policy | PTO Today",
  "policy_url": "ptotoday.com/privacy.html",
  "sha1": "c401c72a70822b78536448e35447090480be7d78",
  "simhash": 16564076936981974854,
  "simhash_updated": true,
  "site_hostname": "ptotoday.com",
  "site_url": "http://ptotoday.com",
  "smog": 14.27,
  "strict_updated": true,
  "timestamp": "20060615074040",
  "word_count": 774,
  "year": 2006
}

--- a/p/pt/pto/ptotoday.com.html
+++ b/p/pt/pto/ptotoday.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the ptotoday.com privacy policy that was archived on 2005-12-30.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051230215347id_/http%3A//ptotoday.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the ptotoday.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615074040id_/http%3A//www.ptotoday.com/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><head>
 	<title>Our Privacy Policy | PTO Today</title>
@@ -57,6 +57,11 @@ var bang = null;
 function sampleThat(url,w,h) {
   bang = open(url + ".htm","popMuzick","resizable,top=0,left=0,width=" + w + ",height=" + h);
 }
+
+function sampleThatFullName(url,w,h) {
+	bang = open(url,"popMuzick","resizable,top=0,left=0,width=" + w + ",height=" + h);
+}
+
 function flush() {
   if (bang != null && bang.open) bang.close();
 }
@@ -86,7 +91,8 @@ function openwin (str)
 		<td align="right" bgcolor="#ECF2D9">
 			<table width="470" border="0" cellspacing="0" cellpadding="1">
               <tbody><tr> 
-                  <td align="center" valign="middle"><a href="http://www.ptotoday.com/cgi-ptotoday/centralad/redirect.cgi/fa69dd74?REGION=articles&amp;CAMPAIGN=AIM&amp;ACCOUNT=AIM&amp;BANNER=aimbig"><img src="http://www.ptotoday.com/cgi-ptotoday/centralad/getimage.cgi/fa69dd74?REGION=articles&amp;CAMPAIGN=AIM&amp;ACCOUNT=AIM&amp;BANNER=aimbig" border="0" alt="AIM Insurance" height="60" width="468"></a></td>
+                  <td align="center" valign="middle"><a href="http://www.ptotoday.com/cgi-ptotoday/centralad/redirect.cgi/07b3c030?REGION=ROS&amp;CAMPAIGN=HouseAdsLarge&amp;ACCOUNT=ptotoday&amp;BANNER=PTOPlusBig"><img src="http://www.ptotoday.com/cgi-ptotoday/centralad/getimage.cgi/07b3c030?REGION=ROS&amp;CAMPAIGN=HouseAdsLarge&amp;ACCOUNT=ptotoday&amp;BANNER=PTOPlusBig" border="0" alt="PTO Plus" height="60" width="468"></a>
+</td>
               </tr>
             </tbody></table>
         </td>
@@ -104,8 +110,8 @@ function openwin (str)
 			<a href="bonusTools.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('top_nav_bonus','','images2/nav/top_nav_bonus-over.gif',1);">
 				<img name="top_nav_bonus" src="images2/nav/top_nav_bonus.gif" width="99" height="19" border="0" alt="bonus tools"></a></td>
 					<td>
-			<a href="conference/" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('top_nav_events_conferences','','images2/nav/top_nav_events_conferences-.gif',1);">
-				<img name="top_nav_events_conferences" src="images2/nav/top_nav_events_conferences.gif" width="146" height="19" border="0" alt="conferences"></a></td>
+			<a href="/manager/" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('top_nav_software','','images2/nav/top_nav_software-over.gif',1);">
+				<img name="top_nav_software" src="images2/nav/top_nav_software.gif" height="19" border="0" alt="software"></a></td>
 					<td>
 			<a href="http://www.ptotoday.com/plus/index.html?trend=rollover" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('top_nav_plus','','images2/nav/top_nav_plus-over.gif',1);">
 				<img name="top_nav_plus" src="images2/nav/top_nav_plus.gif" width="135" height="19" border="0" alt="pto store"></a></td>
@@ -259,7 +265,7 @@ Wrentham, MA 02093<br>
    document.write('<img src="http://www.ptotoday.com/cgi-ptotoday/centralad/getimage.cgi/'+x+'?REGION=sideROS" '); 
   document.write(' border="0"></a>'); 
 
-   </script><a href="http://www.ptotoday.com/cgi-ptotoday/centralad/redirect.cgi/0.18357094384303752"><img src="http://www.ptotoday.com/cgi-ptotoday/centralad/getimage.cgi/0.18357094384303752?REGION=sideROS" border="0"></a> </td>
+   </script><a href="http://www.ptotoday.com/cgi-ptotoday/centralad/redirect.cgi/0.6307202804283536"><img src="http://www.ptotoday.com/cgi-ptotoday/centralad/getimage.cgi/0.6307202804283536?REGION=sideROS" border="0"></a> </td>
                 		</tr>
                 		<tr> 
 						<td bgcolor="#D8E8F5" valign="top" align="left" width="125"><img src="images2/shared/spacer.gif" width="1" height="3"></td>
@@ -271,7 +277,7 @@ Wrentham, MA 02093<br>
    document.write('<img src="http://www.ptotoday.com/cgi-ptotoday/centralad/getimage.cgi/'+x+'?REGION=sideROS" '); 
   document.write(' border="0"></a>'); 
 
-   </script><a href="http://www.ptotoday.com/cgi-ptotoday/centralad/redirect.cgi/0.13300668908226898"><img src="http://www.ptotoday.com/cgi-ptotoday/centralad/getimage.cgi/0.13300668908226898?REGION=sideROS" border="0"></a> </td>
+   </script><a href="http://www.ptotoday.com/cgi-ptotoday/centralad/redirect.cgi/0.4354500497050986"><img src="http://www.ptotoday.com/cgi-ptotoday/centralad/getimage.cgi/0.4354500497050986?REGION=sideROS" border="0"></a> </td>
                 		</tr>
                 		<tr> 
 						<td bgcolor="#D8E8F5" valign="top" align="left" width="125"><img src="images2/shared/spacer.gif" width="1" height="3"></td>
@@ -291,7 +297,7 @@ Wrentham, MA 02093<br>
 				<td align="left">
 						<!--space for quote-->
 						
-<p class="rightpannel">"I love your magazine and Website! You have helped educate me on issues I never thought of. Keep up all of the great work!!!"</p><p class="rightpanneli">Melisa Taylor, PTO President<br>Kaneland South Elementary<br>Sugar Grove, IL</p>
+<p class="rightpannel">"I'm looking forward to a challenging new year as chairman and I'm so excited about all my new ideas. Thanks a bunch!"</p><p class="rightpanneli">Mary Smith, PTO President<br>Meredith Nicholson Elementary<br>Crawfordsville, IN</p>
 
  				</td>
               </tr>
@@ -313,7 +319,7 @@ Wrentham, MA 02093<br>
 <div id="footer">
 <table width="100%" border="0" cellspacing="0" cellpadding="0">
 	<tbody><tr valign="middle" bgcolor="#ECF2D9">
-		<td width="198" height="25" class="footer">&nbsp; © 1999 - 2005 PTO Today, Inc.</td>
+		<td width="198" height="25" class="footer">&nbsp; © 1999 - 2006 PTO Today, Inc.</td>
 		<td><a href="about.html" class="footer">About Us</a></td>
 		<td width="35"><img src="images2/shared/spacer.gif" height="1" width="1" alt=""></td>
 		<td><a href="contact.html" class="footer">Contact Us</a></td>
