npower.com (archived on 2006-06-15)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business",
  "char_count": 3750,
  "classifier_probability": 0.8,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "fairly_difficult",
  "flesch_kincaid": 10.53,
  "homepage_snapshot_redirected_domain": "npower.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20060402232144id_/http://npower.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20060402232144id_/http%3A//npower.com",
  "interval": "2006_A",
  "link_text": "Privacy policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "npower.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20060615074103id_/http%3A//npower.com/At_home/Privacy_policy.html",
  "policy_title": "npower - Privacy Policy.",
  "policy_url": "npower.com/At_home/Privacy_policy.html",
  "sha1": "365987c0263d7ff1c84bcea85a97dce4bdd045b5",
  "simhash": 17098334489470721505,
  "simhash_updated": false,
  "site_hostname": "npower.com",
  "site_url": "http://npower.com",
  "smog": 12.91,
  "strict_updated": true,
  "timestamp": "20060615074103",
  "word_count": 648,
  "year": 2006
}

--- a/n/np/npo/npower.com.html
+++ b/n/np/npo/npower.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the npower.com privacy policy that was archived on 2005-12-28.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051228131353id_/http%3A//npower.com/At_home/Privacy_policy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the npower.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615074103id_/http%3A//npower.com/At_home/Privacy_policy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xml:lang="en"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
@@ -11,15 +11,12 @@
 <body>
 
 <div id="header">
-<div id="contentheader">
-  <div id="logo"><ul class="header"><li class="header"><a href="/index.html" title="npower logo - click to go to the npower.com homepage."><img src="/masterpages/images/logo_header.gif" alt="npower.com homepage (logo)" border="0" width="161" height="62"></a></li></ul></div><span class="top"><a href="#" title="Click here to close the browser window." onclick="self.close();" onkeypress="this.onclick;">Close window </a> </span>
-<span class="top"><a href="#" title="Click here to print this page." onclick="self.print();" onkeypress="this.onclick;">Print page</a> |</span>
-
-
+<div id="headerfg"><img src="/masterpages/images/challenger_header_left.png" alt="npower logo" width="133" height="50">
+<p class="toplinks">
+<a href="#" title="Click here to close the browser window." onclick="self.close();" onkeypress="this.onclick;">Close window</a> | <a href="#" title="Click here to print this page." onclick="self.print();" onkeypress="this.onclick;">Print page</a></p>
 </div>
-
 </div><!--End of header-->
-<noscript>We use JavaScript controls to enable you to print or close the page. If for any reason you have JavaScript disabled, you can print this page either by pressing the print button in your browser, or by pressing the control and the p key at the same time.  To close the window, please click on the x in the top right of your browser.</noscript>
+	<noscript>We use JavaScript controls to enable you to print or close the page. If for any reason you have JavaScript disabled, you can print this page either by pressing the print button in your browser, or by pressing the control and the p key at the same time.  To close the window, please click on the x in the top right of your browser.</noscript>
 
 
 <h2>Privacy Policy</h2>
@@ -51,7 +48,7 @@
 <p>Just ask us! You can e-mail us at customer.data@npower.com or write to The 
   Data Protection Officer, Database Operations, npower Ltd, Oak House, Bridgwater 
   Road, Worcester, WR4 9FP.</p>
-<p>The information that you request will be provided within a maximum of 20 working 
+<p>The information that you request will be provided within a maximum of 40 working 
   days. We try to ensure that the information we hold is accurate, up to date 
   and relevant and we'll be happy to correct any inaccuracies. </p>
 <h2>What are cookies? </h2>
@@ -100,7 +97,7 @@
 escape(document.referrer);
   document.write("<IMG SRC='" + tag + "' WIDTH='1' HEIGHT='1' alt=''>");
 //-->
-</script><img src="http://reporting.npower.com/cgi-bin/rr.cgi/images/blank.gif?nourl=https%3A//web.archive.org/web/20051228131353id_/http%253A//npower.com/At_home/Privacy_policy.html&amp;norefer=" width="1" height="1" alt="">
+</script><img src="http://reporting.npower.com/cgi-bin/rr.cgi/images/blank.gif?nourl=https%3A//web.archive.org/web/20060615074103id_/http%253A//npower.com/At_home/Privacy_policy.html&amp;norefer=" width="1" height="1" alt="">
 
 <noscript>
 <!-- RedEye Tracking Tag - for those without javascript -->
