--- a/c/ce/cen/centova.com.html
+++ b/c/ce/cen/centova.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the centova.com privacy policy that was archived on 2005-04-04.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20050404120922id_/http%3A//www.centova.com/pages/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the centova.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615074221id_/http%3A//www.centova.com/pages/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
 	<title>Centova Messaging Solutions - Privacy Policy</title>
@@ -62,9 +62,16 @@ function preloadImages() {
 <table width="770" border="0" cellpadding="0" cellspacing="0">
 	<tbody><tr>
 		<td width="343" style="padding-left: 8px"><a href="/"><img src="/data/themes/jabbix/images/logo.png" width="194" height="28" alt="" border="0"></a></td>
-		<td width="427">
-			<a href="/pages/services/" onmouseover="changeImages('services', '/data/themes/jabbix/images/services-over.png'); return true;" onmouseout="changeImages('services', '/data/themes/jabbix/images/services.png'); return true;" onmousedown="changeImages('services', '/data/themes/jabbix/images/services-over.png'); return true;" onmouseup="changeImages('services', '/data/themes/jabbix/images/services-over.png'); return true;">
-				<img name="services" src="/data/themes/jabbix/images/services.png" width="103" height="44" border="0" alt=""></a></td>
+<!--		<td width="427">
+
+			<a href="/pages/services/"
+				onmouseover="changeImages('services', '/data/themes/jabbix/images/services-over.png'); return true;"
+				onmouseout="changeImages('services', '/data/themes/jabbix/images/services.png'); return true;"
+				onmousedown="changeImages('services', '/data/themes/jabbix/images/services-over.png'); return true;"
+				onmouseup="changeImages('services', '/data/themes/jabbix/images/services-over.png'); return true;">
+				<img name="services" src="/data/themes/jabbix/images/services.png" width="103" height="44" border="0" alt="" /></a>
+				</td>-->
+		<td><img src="/data/themes/jabbix/images/spacer.gif" width="103" height="1" alt=""></td>
 		<td>
 			<a href="/pages/products/" onmouseover="changeImages('products', '/data/themes/jabbix/images/products-over.png'); return true;" onmouseout="changeImages('products', '/data/themes/jabbix/images/products.png'); return true;" onmousedown="changeImages('products', '/data/themes/jabbix/images/products-over.png'); return true;" onmouseup="changeImages('products', '/data/themes/jabbix/images/products-over.png'); return true;">
 				<img name="products" src="/data/themes/jabbix/images/products.png" width="103" height="44" border="0" alt=""></a></td>
@@ -197,4 +204,5 @@ Copyright 2004, <a href="http://www.centova.com">Centova Messaging Solutions</a>
 
 
 
+			
 </body></html>
