commonsensemedia.org (archived on 2006-06-15)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "education",
  "char_count": 9119,
  "classifier_probability": 0.97,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 11.87,
  "homepage_snapshot_redirected_domain": "commonsensemedia.org",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20060401011353id_/http://www.commonsensemedia.org/",
  "homepage_snapshot_url": "https://web.archive.org/web/20060401011353id_/http%3A//commonsensemedia.org",
  "interval": "2006_A",
  "link_text": "Privacy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "commonsensemedia.org",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20060615075211id_/http%3A//www.commonsensemedia.org/about_us/privacy.php",
  "policy_title": "Common Sense Media - Family Friendly Reviews",
  "policy_url": "commonsensemedia.org/about_us/privacy.php",
  "sha1": "47ee6bc5454ba97e4db58ee6f5c614d185d9ca11",
  "simhash": 9880333060601359493,
  "simhash_updated": false,
  "site_hostname": "commonsensemedia.org",
  "site_url": "http://commonsensemedia.org",
  "smog": 14.84,
  "strict_updated": false,
  "timestamp": "20060615075211",
  "word_count": 1525,
  "year": 2006
}

--- a/c/co/com/commonsensemedia.org.html
+++ b/c/co/com/commonsensemedia.org.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the commonsensemedia.org privacy policy that was archived on 2005-12-20.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051220022520id_/http%3A//www.commonsensemedia.org/about_us/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the commonsensemedia.org privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615075211id_/http%3A//www.commonsensemedia.org/about_us/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
 <title>Common Sense Media - Family Friendly Reviews</title>
@@ -9,7 +9,7 @@
 <script type="text/javascript" src="/jslib.js"></script>
 <script type="text/javascript" src="/csspopup.js"></script> 
 <script type="text/javascript" src="/emailProtect.js"></script>
-<script src="/__utm.js" type="text/javascript"></script>
+<script type="text/javascript" src="/pleaseRegister.js"></script>
 <style type="text/css" media="all">@import "/css/style.css"; </style>
 <link rel="shortcut icon" href="/favicon.ico">  <style type="text/css" media="all">@import "/css/style_aboutus.css";</style>
 <link rel="stylesheet" media="handheld" type="text/css" href="/css/style_handheld.css">
@@ -17,24 +17,25 @@
 </head>
 <body id="aboutus">
 <div id="banner">
-<h1 class="hide">Common Sense Media - Family Friendly Reviews</h1>
-<a href="/"><img src="/img/topnav/logo.gif" width="212" height="46" alt="Common Sense Media Website" class="logo"></a>
+<blockquote class="hide">Common Sense Media - Family Movie Reviews, Movie Rental Reviews, Music Reviews, Website Reviews, Childrens Book Reviews and More</blockquote>
+<a href="/"><img src="/img/topnav/logo.gif" width="212" height="46" alt="Common Sense Media Website" class="logo"></a>		
 <div id="topnav">
 <p class="hideSkipnav"><a href="#skipnav">skip main navigation</a></p>
 <ul>
-<li class="first"><a href="/index.php" class="nt_home"><span>Home</span></a></li>
-<li><a href="/reviews/" class="nt_reviews"><span>Reviews</span></a></li>
-<li><a href="/newsletter/" class="nt_newsletter"><span>Newsletter</span></a></li>
-<li><a href="http://commonsenseblog.org/" class="nt_blog"><span>Blog</span></a></li>
-<li><a href="/parent_tips/" class="nt_parentTips"><span>Parent Tips</span></a></li>
-<li><a href="/resources/" class="nt_resources"><span>Resources</span></a></li>
-<li><a href="/take_action/" class="nt_takeAction"><span>Take Action</span></a></li>
-<li class="on"><a href="/about_us/" class="nt_about_us"><span>About Us</span></a></li>
-</ul>    <div id="tagline">
-<h2 title="Your Trusted Source For Family Friendly Reviews"><span>Your Trusted Source For Family Friendly Reviews</span></h2>
+<li class="first"><a href="/index.php" title="Home" class="nt_home"><span>Home</span></a></li>
+<li><a href="/reviews/" title="Reviews" class="nt_reviews"><span>Reviews</span></a></li>
+<li><a href="/newsletter/" title="Newsletter" class="nt_newsletter"><span>Newsletter</span></a></li>
+<li><a href="http://commonsenseblog.org/" title="Blog" class="nt_blog"><span>Blog</span></a></li>
+<li><a href="/parent_tips/" title="Parent Tips" class="nt_tips"><span>Parent Tips</span></a></li>
+<li><a href="/resources/" title="Resources" class="nt_resources"><span>Resources</span></a></li>
+<li><a href="/take_action/" title="Take Action" class="nt_takeAction"><span>Take Action</span></a></li>
+<li><a href="/news/" title="News" class="nt_news"><span>News</span></a></li>
+<li class="on"><a href="/about_us/" title="About Us" class="nt_about_us"><span>About Us</span></a></li>
+</ul>		<div id="tagline">
+<h2 class="tag" title="Your Trusted Source For Family Reviews"><span>Your Trusted Source For Family Reviews</span></h2>
 <div id="sessionlinks">
 <p class="nobreak">
-<a href="/user/login.php?fwd=%2Fabout_us%2Fprivacy.php" id="login" onclick="popLogin();return false;" title="Show Login Box">Sign In</a>
+<a class="popupoff" href="/user/login.php?fwd=%2Fabout_us%2Fprivacy.php" id="login" onclick="popLogin();return false;" title="Show Login Box">Sign In</a>
 </p>
 <form id="popLoginForm" action="/user/login.php?fwd=%2Fabout_us%2Fprivacy.php" method="post">
 <h3>Login</h3>
@@ -43,9 +44,9 @@
 <p style="margin:0;padding:0"><input type="hidden" name="submitLogin" value="LOGIN">
 <input type="hidden" name="AutoLogin" value="YES"></p>
 <p id="hideLogin">
-<a href="/user/register.php?fwd=/about_us/privacy.php" title="Register">not a member?</a><br>
-<a href="/user/forgot_password.php?fwd=/about_us/privacy.php" title="Password Reminder">forgot password?</a><br>
-<a href="#" onclick="closeLogin();" title="Hide Login Box"><img src="/img/buttons/btn_close.gif" width="22" height="14" alt="Hide Login Box"></a>
+<a class="popupoff" href="/user/register.php?fwd=/about_us/privacy.php" title="Register">not a member?</a><br>
+<a class="popupoff" href="/user/forgot_password.php?fwd=%2Fabout_us%2Fprivacy.php" title="Password Reminder">forgot password?</a><br>
+<a class="popupoff" href="#" onclick="closeLogin();" title="Hide Login Box"><img src="/img/buttons/btn_close.gif" width="22" height="14" alt="Hide Login Box"></a>
 </p>
 <p><input class="submit" name="submit" value="LOGIN" type="image" alt="Submit" src="/img/buttons/btn_submit.gif"></p>
 </form>
@@ -55,36 +56,45 @@
 </div> <!-- closes id="banner" -->
 <div class="columnheader">
 <div class="search">
-<form id="sitesearch2" method="post" action="" onsubmit="go_search('sitesearch2')">
+<form id="sitesearch2" method="post" action="/reviews/ShowSearchResults.php">
 <p>
-<input type="hidden" name="index" value="169514">
-<input type="hidden" name="psel" value="Main">
-<input type="text" name="query">
+<input type="hidden" name="num" value="10">
+<input type="hidden" name="site" value="CSM_Reviews">
+<input type="hidden" name="output" value="xml_no_dtd">
+<input type="hidden" name="client" value="CSM_Reviews">
+<input type="text" id="textquery" name="q">
 </p>
 <p class="radios">
-<label for="sitesearchRadio0"><input id="sitesearchRadio0" class="radios" type="radio" checked="checked" name="sortval" value="0">Media Titles</label>
-<label for="sitesearchRadio1"><input id="sitesearchRadio1" class="radios" type="radio" name="sortval" value="1">Rest of the site</label>		
+<label for="sitesearchRadio0"><input id="sitesearchRadio0" class="radios" type="radio" checked="checked" name="restrict" value="reviews">Media Titles</label>
+<label for="sitesearchRadio1"><input type="radio" name="restrict" id="sitesearchRadio1" value="restOfSite" class="radios">Rest of the site</label>		
 </p>
 <p>
 <input class="search" type="image" src="/img/buttons/btn_search.gif">
 </p>
 </form>
 </div>
-<h2 class="hide">About Us</h2>
+<h1 class="hide"> About Us</h1>
 </div> <!-- closes id="columnheader" -->
 <div id="pagecolumn">
 <div id="leftnav">
 <strong class="hideSkipnav">About Us: Navigation</strong>
 <ul id="leftnavlinks">
-<li><a href="/about_us/index.php"><span>Why CSM</span></a></li>
-<li><a href="/about_us/who_we_are.php"><span>Who We Are</span></a></li>
-<li><a href="/about_us/our_directors.php"><span>Our Directors</span></a></li>
-<li><a href="/about_us/our_advisors.php"><span>Our Advisors</span></a></li>
-<li><a href="/about_us/press/index.php"><span>Press</span></a></li>
-<li><a href="/about_us/faq.php"><span>FAQs</span></a></li>
-<li><a href="/about_us/contact_us.php"><span>Contact Us</span></a></li>
+<li><a href="/about_us/index.php" title="Why CSM"><span>Why CSM</span></a></li>
+<li><a href="/about_us/who_we_are.php" title="Who We Are"><span>Who We Are</span></a></li>
+<li><a href="/about_us/our_directors.php" title="Our Directors"><span>Our Directors</span></a></li>
+<li><a href="/about_us/our_advisors.php" title="Our Advisors"><span>Our Advisors</span></a></li>
+<li><a href="/about_us/partners.php" title="Our Partners"><span>Our Partners</span></a></li>
+<li><a href="/about_us/job_opportunities.php" title="Job Opportunities"><span>Job Opportunities</span></a></li>
+<li><a href="/about_us/faq.php" title="FAQs"><span>FAQs</span></a></li>
+<li><a href="/about_us/contact_us.php" title="Contact Us"><span>Contact Us</span></a></li>
 </ul>
 <!--PICOSEARCH_SKIPTEXTSTART-->
+<div id="leftBoxRed" class="leftBox">
+<h3>Join Us</h3>
+<p>Sign-up with Common Sense to write reviews, post to the blog, and receive our weekly newsletter. All for free!</p>
+<p class="link"><a href="/user/register.php?fwd=/" class="signUp" title="Sign Up!"><strong>Sign Up!</strong></a></p>
+<div class="boxbottom">&nbsp;<hr></div>
+</div>
 <div id="leftBoxBlue" class="leftBox">
 <h3>Print &amp; Go</h3>
 <p>Get a printer-friendly version of this page.</p>
@@ -94,7 +104,7 @@
 <div id="leftBoxGreen" class="leftBox">
 <h3>Email it!</h3>
 <p>Email your friends, family and co-workers about Common Sense.</p>
-<p class="link"><a href="/take_action/tell_a_friend.php?url=/about_us/privacy.php&amp;qu=" onclick="popUp(this.href+'&amp;type=popup',600,400); return false;" class="sendIt" title="Send it!">
+<p class="link"><a href="/take_action/tell_a_friend.php?url=/about_us/privacy.php&amp;qu=" onclick="popUpNoScroll(this.href+'&amp;type=popup',600,345); return false;" class="sendIt" title="Send it!">
 <strong>Send it!</strong></a></p>
 <div class="boxbottom">&nbsp;<hr></div>
 </div>
@@ -109,35 +119,23 @@
       	}
       </script>
 <h3>Daily Poll</h3>
-<a name="poll_82"> </a>
+<a name="poll_177"> </a>
 <form id="pollForm" method="post" action="/ooframe/app/poll/result.php">
-<p style="margin:0;padding:0;"><input type="hidden" name="question_group_id" value="82"></p>
-<p>How much time do your kids spend watching TV each day?</p>
+<p style="margin:0;padding:0;"><input type="hidden" name="question_group_id" value="177"></p>
+<p>Is there too much focus on celebrities in the media? </p>
 <p style="margin:0;padding:0;"><input type="hidden" name="questions[0][questionKey]" value="0"></p>
 <fieldset>
 <input type="radio" name="questions[0][answerKey]" id="pollAns0" value="0"><label for="pollAns0">
-They   don't   watch   TV
+Yes
 </label>
 <input type="radio" name="questions[0][answerKey]" id="pollAns1" value="1"><label for="pollAns1">
-An   hour   or   less
-</label>
-<input type="radio" name="questions[0][answerKey]" id="pollAns2" value="2"><label for="pollAns2">
-1-2   hours
-</label>
-<input type="radio" name="questions[0][answerKey]" id="pollAns3" value="3"><label for="pollAns3">
-2+   hours
+No
 </label>
 </fieldset>
 <p class="link"><input type="hidden" name="submitPoll" value="submit">
-<a href="#poll_82" onclick="doSubmitPoll()" class="submitIt" id="pollSubmit"><strong>Submit it!</strong></a>
+<a href="#poll_177" onclick="doSubmitPoll()" class="submitIt" id="pollSubmit"><strong>Submit it!</strong></a>
 </p>
 </form>
-<div class="boxbottom">&nbsp;<hr></div>
-</div>
-<div id="leftBoxRed" class="leftBox">
-<h3>Join Us</h3>
-<p>Sign-up with Common Sense to write reviews, post to the blog, and receive our weekly newsletter. All for free!</p>
-<p class="link"><a href="/user/register.php?fwd=/" class="signUp" title="Sign Up!"><strong>Sign Up!</strong></a></p>
 <div class="boxbottom">&nbsp;<hr></div>
 </div>
 <div id="leftBoxPurple" class="leftBox">
@@ -160,8 +158,8 @@ An   hour   or   less
 <strong>Mail:</strong><br>
 Privacy Concerns<br>
 Common Sense Media<br>
-500 Treat Ave., Suite 100<br>
-San Francisco, CA 94110 
+1550 Bryant Street, Suite 555<br>
+San Francisco, CA 94103 
 </p>
 <p>
 Please review our <a href="/about_us/terms_of_use.php">Terms of Use</a> to review the terms that govern the relationship between you and CSM when you use the CSM website. 
@@ -236,12 +234,25 @@ Because we respect your privacy, we want to disclose to you how we use the infor
 <li><a href="https://secure.groundspring.org/dn/index.php?id=2061">Make a Donation</a></li>
 <li><a href="/about_us/">About Us</a></li>
 <li><a href="/about_us/contact_us.php">Contact Us</a></li>
+<li><a href="/take_action/tell_a_friend.php">Tell A Friend</a></li><br>
+<li><a href="/reviews/index.php?showthis=AllMovies" title="Family Movie Reviews">Movie Reviews</a></li>
+<li><a href="/reviews/index.php?showthis=Television" title="TV Reviews">TV Reviews</a></li>
+<li><a href="/reviews/index.php?showthis=VideoGame" title="Video Game Reviews">Video Game Reviews</a></li>
+<li><a href="/reviews/index.php?showthis=Music" title="Music Reviews">Music Reviews</a></li>
+<li><a href="/reviews/index.php?showthis=Website" title="Web Site Reviews">Web Site Reviews</a></li>
+<li><a href="/reviews/index.php?showthis=Book" title="Book Reviews">Book Reviews</a></li>
 </ul>
 <p class="hideSkipnav"><strong>This website was designed for Netscape 7+, Mozilla 1.4+ or IE5.5+.  You may need to upgrade your browser to view this website as intended.</strong></p>
-<p>© Common Sense Media Inc. 2005. All rights reserved.  Website built by <a href="http://www.islco.com/">ISL Consulting Co.</a><br>
+<p>© Common Sense Media Inc. 2006. All rights reserved.  Web site built by <a href="http://www.islco.com/">ISL Consulting Co.</a><br>
 We gratefully acknowledge Stephen Brown of <a href="http://www.qualityarts.com" onclick="openWindow(this.href,'qualityarts',770,580);return false;">Quality Arts</a> for use of Commonsense.com
 </p>
 </div>
+<script src="http://www.google-analytics.com/urchin.js" type="text/javascript"></script>
+<script type="text/javascript">
+_uacct = "UA-224718-1";
+_userv = 2;
+urchinTracker();
+</script>
 
 
 
