--- a/h/ho/hom/homesandland.com.html
+++ b/h/ho/hom/homesandland.com.html
@@ -1,37 +1,37 @@
-<!--The following is the downloaded HTML source of the homesandland.com privacy policy that was archived on 2005-12-19.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051219135636id_/http%3A//www.homesandland.com/PrivacyPolicy.cfm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the homesandland.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615075331id_/http%3A//www.homesandland.com/PrivacyPolicy.cfm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><head>
 	<meta name="Description" content="Real Estate for sale, Apartments for rent in the United States and Canada">
 	<meta name="Keywords" content="Real Estate, Homes for Sale, Apartments for Rent">
 	<meta name="Owner" content="Homes &amp; Land Affiliates, LLC.">
-	<meta name="Copyright" content="Copyright ©2005 Homes &amp; Land Affiliates, LLC. All Rights Reserved.">
+	<meta name="Copyright" content="Copyright ©2006 Homes &amp; Land Affiliates, LLC. All Rights Reserved.">
 	<meta name="rating" content="General">
 	<meta name="robots" content="INDEX,FOLLOW" http-equiv="robots">
 	
 
 	<title>Homes &amp; Land Privacy Policy</title>
 
-	<link href="/style.css" rel="stylesheet" type="text/css">
-	<script type="text/javascript" src="/ClientSide/Scripts/Common.js" language="JavaScript"></script>
+	<link href="/Styles/hnl.css" rel="stylesheet" type="text/css">
+	<script language="JavaScript" type="text/javascript" src="/ClientSide/Scripts/Common.js"></script>
+	<link rel="SHORTCUT ICON" href="http://www.homesandland.com/favicon.ico">
 	
+
 
 <script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
 </script>
 <script type="text/javascript">
-_uacct = "UA-67401-7";
+_uacct = "UA-321726-1";
 urchinTracker();
 </script>
+
 </head>
 
-<body class="SiteWide" bgcolor="#FFFFFF" link="#006699" alink="#330066" vlink="#333366" onload="JavaScript:if (self != top) top.location = self.location; return true;">
+<body class="SiteWide" bgcolor="#FFFFFF" link="#006699" alink="#330066" vlink="#333366">
 <basefont face="Arial,Helvetica,sans-serif" size="2" color="#000000">
 
-	<div style="position:absolute; top:0px; left:0px;"> 
-		
-			
-			<img src="/Images/National/RealEstate/RE_Logo_005.gif" border="0" align="left" alt="Homes &amp; Land" style="cursor:pointer;" onclick="parent.location='http://www.homesandland.com/index.cfm'">
-		
+	<div style="position:absolute;top:0px;left:0px;" title="Real Estate and Homes for Sale">
+		<img src="/Images/National/RealEstate/RE_Logo_003.gif" border="0" align="left" alt="Real Estate and Homes for Sale" style="cursor:pointer;" onclick="parent.location='http://www.homesandland.com/index.cfm'">
 	</div>
 
 <table width="780" border="0" cellspacing="0" cellpadding="0" style="top:0px; left:0px; vertical-align:top;">
@@ -49,10 +49,18 @@ urchinTracker();
 
 	<tr valign="bottom"> 
 		<td width="148">&nbsp;</td>
-		<td width="4" rowspan="7"><img src="/Images/shim.gif" width="4" height="4" border="0" alt=""></td>
-		<td width="476" valign="bottom" align="right"><div class="Tab_TopAPT"><h2><a href="http://www.rentalguideapartments.com" style="text-decoration:none;color:white;"> APARTMENT LISTINGS </a></h2></div><div class="Tab_TopRE"><h2><a href="http://www.homesandland.com" style="text-decoration:none;color:white;"> REAL ESTATE LISTINGS </a></h2></div></td>
-		<td width="4" rowspan="7"><img src="/Images/shim.gif" width="4" height="4" border="0" alt=""></td>
-		<td width="148" valign="bottom" align="right"><div class="Tab_TopMAG"><h2><a href="/OrderMagazine.cfm" style="text-decoration:none;color:white;"> ORDER FREE MAGAZINES </a></h2></div></td>
+		<td width="4"><img src="/Images/shim.gif" width="4" height="4" border="0" alt=""></td>
+		<td valign="bottom" align="right" colspan="3">
+			<div id="tabcontainer">
+				<ul id="tabnav">
+				  <li class="tablast">&nbsp;</li>
+				  <li class="tab5"><h2><a href="/OrderMagazine.cfm">ORDER MAGAZINES</a></h2></li>
+				  <li class="tab3"><h2><a href="http://www.rentalguideapartments.com">APARTMENTS</a></h2></li>
+				  <li class="tab2"><h2><a href="http://www.homesandland.com/NewHomes.cfm">NEW HOMES</a></h2></li>
+				  <li class="tab1"><h2><a href="http://www.homesandland.com" style="color:white;">REAL ESTATE</a></h2></li>
+				</ul>
+			</div>
+		</td>
 	</tr>
 
 	<tr>
@@ -62,9 +70,10 @@ urchinTracker();
 						<a href="/Fav/FavSignIn.cfm?SiteActiveTab=1">MY FAVORITES</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="/Fav/FavSignIn.cfm?SiteActiveTab=1">Sign In</a>
 					
 			</td>
+			<td><img src="/Images/shim.gif" width="4" height="4" border="0" alt=""></td>
 			
 			<td class="breadcrumbs" style="background-color:#6DA8E2;" colspan="3" rowspan="1"><h1 id="breadcrumbs_h1">
-				<a href="http://www.homesandland.com/">Homes &amp; Land</a>&nbsp;&gt;&nbsp;Privacy Policy</h1>
+				<a href="http://www.homesandland.com/" title="Homes &amp; Land">Homes &amp; Land</a>&nbsp;&gt;&nbsp;Privacy Policy</h1>
 			</td>
 			
 	</tr>
@@ -72,8 +81,10 @@ urchinTracker();
 	<tr> 
 		
 			<td><img src="/Images/shim.gif" width="4" height="4" border="0" alt=""></td>
+			<td rowspan="6"><img src="/Images/shim.gif" width="4" height="4" border="0" alt=""></td>
 		
 			<td><img src="/Images/shim.gif" width="4" height="4" border="0" alt=""></td>
+			<td rowspan="6"><img src="/Images/shim.gif" width="4" height="4" border="0" alt=""></td>
 		
 			<td><img src="/Images/shim.gif" width="4" height="4" border="0" alt=""></td>
 		
@@ -84,7 +95,7 @@ urchinTracker();
 			<td class="sectionsidebar" style="background-color:#D6E3F7;" valign="top" colspan="1" rowspan="1">&nbsp;</td>
 		
 		<td class="sectionbody" style="background-color:white;" valign="top" colspan="3" rowspan="1">
-	
+		
 <style type="text/css" media="all">
 #general_content {
 	color:black;
@@ -187,32 +198,38 @@ may have. Our email address is
 
 <tr>
 	<td class="footerlinks" width="780" colspan="5" nowrap="">
-		<a href="/ContactUs.cfm" class="footerlinks_link">Contact Homes &amp; Land</a> &nbsp;|&nbsp;
-		<a href="http://www.homesandland.com/index.cfm" class="footerlinks_link">Real Estate</a> &nbsp;|&nbsp;
+		<a href="http://www.homesandland.com/ContactUs.cfm" class="footerlinks_link">Contact Homes &amp; Land</a> &nbsp;|&nbsp;
+		<a href="http://www.homesandland.com/SiteMap/SiteMap.html" class="footerlinks_link">Real Estate Site Map</a> &nbsp;|&nbsp;
 		<a href="http://www.rentalguideapartments.com" class="footerlinks_link">Apartments</a> &nbsp;|&nbsp;
 		<a href="http://www.homesandland.com/FranchiseOpportunities.cfm" class="footerlinks_link">Franchise Info</a> &nbsp;|&nbsp;
 		<a href="http://www.homesandland.com/AdvertisingInfo.cfm" class="footerlinks_link">Advertiser Info</a> &nbsp;|&nbsp;
-		<a href="/OrderMagazine.cfm" class="footerlinks_link">Request A Magazine</a> &nbsp;|&nbsp;
-		<a href="/AboutUs.cfm" class="footerlinks_link">About Us</a> &nbsp;|&nbsp;
-		<a href="/MagazineNetwork.cfm" class="footerlinks_link">Magazine Directory</a> &nbsp;|&nbsp;
+		<a href="http://www.homesandland.com/OrderMagazine.cfm" class="footerlinks_link">Request A Magazine</a> &nbsp;|&nbsp;
+		<a href="http://www.homesandland.com/AboutUs.cfm" class="footerlinks_link">About Us</a> &nbsp;|&nbsp;
+		<a href="http://www.homesandland.com/MagazineNetwork.cfm" class="footerlinks_link">Magazine Directory</a> &nbsp;|&nbsp;
 		<a href="http://admaker.homesandland.com" class="footerlinks_link">Advertiser Log-in</a>
 	</td>
 </tr>
 
-<tr>
+
+
+
+</tbody></table>
+
+<table width="780" border="0" cellspacing="0" cellpadding="0" style="top:0px; left:0px; vertical-align:top;">
+<tbody><tr>
 	<td width="780" colspan="5" class="copyright">
-		Copyright ©2005 Homes &amp; Land Affiliates, LLC. All Rights Reserved.<br>
-		<a class="footerlinks_link" href="/TermsAndConditions.cfm">Terms and Conditions</a> &nbsp;|&nbsp;
-		<a class="footerlinks_link" href="/PrivacyPolicy.cfm">Privacy Policy</a>
+		Copyright ©2006 Homes &amp; Land Affiliates, LLC. All Rights Reserved.<br>
+		<a href="/TermsAndConditions.cfm" class="footerlinks_link">Terms and Conditions</a> &nbsp;|&nbsp;
+		<a href="/PrivacyPolicy.cfm" class="footerlinks_link">Privacy Policy</a>
 	</td>
 </tr>
 <tr>
 	<td width="780" colspan="5" class="copyright">
-		<a href="javascript:popupWindowURL('/PopupEOH.cfm','_EOH',600,600,false,true,true)"><img src="/Images/NewSite/HUD.gif" alt="Equal Housing Opportunity Logo" border="0" align="absmiddle" title="View the Equal Housing Opportunity Statement"></a>&nbsp;<a href="javascript:popupWindowURL('/PopupEOH.cfm','_EOH',600,600,false,true,true)" class="footerlinks_link" title="View the Equal Housing Opportunity Statement">Equal Housing Opportunity</a>
+		<a href="javascript:popupWindowURL('/PopupEOH.cfm','_EOH',600,600,false,true,true)"><img src="/Images/NewSite/HUD.gif" alt="Equal Housing Opportunity Logo" border="0" align="middle" title="View the Equal Housing Opportunity Statement"></a>&nbsp;<a href="javascript:popupWindowURL('/PopupEOH.cfm','_EOH',600,600,false,true,true)" class="footerlinks_link" title="View the Equal Housing Opportunity Statement">Equal Housing Opportunity</a>
 	</td>
 </tr>
 </tbody></table><br>
-<img src="/ClientSide/Images/TrackerImage.cfm?UID=1135000600515542481&amp;IP=209%2E237%2E238%2E173&amp;PN=www%2Ehomesandland%2Ecom%2FPrivacyPolicy%2Ecfm&amp;CFID=2603084&amp;CFT=21064189&amp;WID=&amp;MID=&amp;AID=&amp;PID=&amp;LID=&amp;CI=&amp;ST=&amp;ZIP=&amp;CO=&amp;HR="> 
+<img src="/ClientSide/Images/TrackerImage.cfm?UID=1150358014984883997&amp;IP=209%2E237%2E238%2E225&amp;PN=www%2Ehomesandland%2Ecom%2FPrivacyPolicy%2Ecfm&amp;CFID=15635744&amp;CFT=24956699&amp;WID=&amp;MID=&amp;AID=&amp;PID=&amp;LID=&amp;CI=&amp;ST=&amp;ZIP=&amp;CO=&amp;HR="> 
 
 
 </body></html>
