--- a/l/le/lea/leagueathletics.com.html
+++ b/l/le/lea/leagueathletics.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the leagueathletics.com privacy policy that was archived on 2005-12-18.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051218013857id_/http%3A//leagueathletics.com/About/Privacy.asp%3Forg%3D) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the leagueathletics.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615080035id_/http%3A//leagueathletics.com/About/Privacy.asp%3Forg%3D) for the most accurate reproduction.-->
 
 <html><head>
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
@@ -60,7 +60,7 @@ function menuOff(ctrl) {
       <tbody><tr>
         
         <td nowrap="" class="select" onmouseover="menuOn(this);" onmouseout="menuOff(this);">&nbsp;
-          <a class="select" href="http://LeagueAthletics.com/About/Default.asp" title="Sports web hosting services">
+          <a class="select" href="http://LeagueAthletics.com/About/Default.asp" title="Sports websites and web hosting services">
           Services</a>&nbsp;
         </td>        
 
@@ -85,13 +85,13 @@ function menuOff(ctrl) {
   </tr>
   
   <tr>
-    <td height="1" bgcolor="#FFFFFF"><img border="0" src="/images/c.gif" alt="Lacrosse web hosting"></td>
+    <td height="1" bgcolor="#FFFFFF"><img border="0" src="/images/c.gif" alt="Sports website hosting"></td>
     <td bgcolor="#000000" width="1">
     <img border="0" src="/images/c.gif" width="1"></td>   
   </tr>
   
   <tr>
-    <td bgcolor="#C0C0CC">
+    <td bgcolor="#EAEAEA">
     <img src="/Images/Banner.gif" border="0" alt="LeagueAthletics.com - Home of quality sports web hosting and automated web sites for sports leagues of all shapes and sizes"></td>
     <td bgcolor="#000000" width="1">
     <img border="0" src="/images/c.gif" width="1"></td>   
@@ -255,7 +255,35 @@ function menuOff(ctrl) {
     <td align="center"><font size="1" color="#FFFFFF">Club Visitors:</font></td>
   </tr>
   <tr>
-    <td align="center"><font size="2" color="#FFBB00" face="Arial"><span style="background-color: #000000">&nbsp;<b>18,123,924</b></span></font></td>
+    <td align="center"><font size="2" color="#FFBB00" face="Arial"><span style="background-color: #000000">&nbsp;<b>30,597,318</b></span></font></td>
+  </tr>
+  <tr>
+    <td>&nbsp;</td>
+  </tr>
+  <tr>
+    <td>&nbsp;</td>
+  </tr>
+  <tr>
+    <td>&nbsp;</td>
+  </tr>
+  <tr>
+    <td>
+<script type="text/javascript"><!--
+google_ad_client = "pub-2523682258301154";
+google_ad_width = 120;
+google_ad_height = 600;
+google_ad_format = "120x600_as";
+google_ad_type = "text_image";
+google_ad_channel ="5876650747";
+google_color_border = "003399";
+google_color_bg = "003399";
+google_color_link = "FFFFFF";
+google_color_url = "FFFFFF";
+google_color_text = "FFFFFF";
+//--></script>
+<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+</script>    
+    </td>
   </tr>
 </tbody></table>
     </td>
