oldfriends.co.nz (archived on 2006-06-15)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "education;personals;shopping",
  "char_count": 6444,
  "classifier_probability": 0.99,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 11.37,
  "homepage_snapshot_redirected_domain": "oldfriends.co.nz",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20060405140928id_/http://www.oldfriends.co.nz/",
  "homepage_snapshot_url": "https://web.archive.org/web/20060405140928id_/http%3A//oldfriends.co.nz",
  "interval": "2006_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "oldfriends.co.nz",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20060615080217id_/http%3A//www.oldfriends.co.nz/PrivacyPolicy.aspx",
  "policy_title": "OldFriends.co.nz - Find your old friends! - School Reunions - New Zealand",
  "policy_url": "oldfriends.co.nz/PrivacyPolicy.aspx",
  "sha1": "5d82bbad30cab9d52910bb86c7ba6be31bbfa09e",
  "simhash": 9650814430665234772,
  "simhash_updated": true,
  "site_hostname": "oldfriends.co.nz",
  "site_url": "http://oldfriends.co.nz",
  "smog": 13.87,
  "strict_updated": true,
  "timestamp": "20060615080217",
  "word_count": 1051,
  "year": 2006
}

--- a/o/ol/old/oldfriends.co.nz.html
+++ b/o/ol/old/oldfriends.co.nz.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the oldfriends.co.nz privacy policy that was archived on 2005-12-17.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051217080225id_/http%3A//www.oldfriends.co.nz/PrivacyPolicy.aspx) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the oldfriends.co.nz privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615080217id_/http%3A//www.oldfriends.co.nz/PrivacyPolicy.aspx) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><head>
 
@@ -37,7 +37,7 @@ function remBrowser(){if (document.signin.remember.checked)if (!confirm("Ticking
 <table border="0" cellpadding="0" cellspacing="0">
 <tbody><tr>
 <td id="logo" valign="bottom">
-<h1><a href="/Default.aspx"><img src="/images/logo_christmas.gif" alt="OldFriends.co.nz -- Find your old school friends! School reunions New Zealand" border="0" style="margin-bottom:15px;"></a></h1>
+<h1><a href="/Default.aspx"><img src="/images/logo2.gif" alt="OldFriends.co.nz -- Find your old school friends! School reunions New Zealand" border="0" style="margin-bottom:15px;"></a></h1>
 </td>
 <td id="tabs">
 <table border="0" cellpadding="0" cellspacing="0">
@@ -51,7 +51,7 @@ function remBrowser(){if (document.signin.remember.checked)if (!confirm("Ticking
 <tr><td class="t_x0">&nbsp;</td><td class="t_off" style="width:50px;"><a href="/Default.aspx"><b>Home</b></a></td><td class="t_00"><span>&nbsp;|&nbsp;</span></td><td class="t_off" style="width:67px;"><a href="/MemberProfile.aspx"><b>My&nbsp;Profile</b></a></td><td class="t_00"><span>&nbsp;|&nbsp;</span></td><td class="t_off" style="width:72px;"><a href="/CircleOfFriends.aspx?target_url=/Favourites.aspx"><b>My&nbsp;Friends</b></a></td><td class="t_0x">&nbsp;</td></tr>
 </tbody></table>
 </td>
-<td id="tab_banner"><a id="Header_AdRotatorTab" href="/Track.aspx?method=whitepages_tab&amp;redirect=http%3A%2F%2Fad%2Enz%2Edoubleclick%2Enet%2Fclk%3B24151048%3B12252424%3Bq" target="_top"><img src="/images/banners/whitepages_200x80.gif" alt="Whitepages" border="0"></a></td>
+<td id="tab_banner"><a id="Header_AdRotatorTab" href="/Track.aspx?method=warehouse%5ftab&amp;redirect=http%3A%2F%2Fwww%2Ethewarehouse%2Eco%2Enz" target="_top"><img src="/images/banners/mc_thewarehouse_creditcard_tab.gif" alt="The Warehouse" border="0"></a></td>
 </tr>
 </tbody></table>
 <table width="100%" border="0" cellpadding="3" cellspacing="0" id="search">
@@ -68,7 +68,7 @@ function remBrowser(){if (document.signin.remember.checked)if (!confirm("Ticking
 <div id="eyebrow"><span>Login</span></div><form action="/Login.aspx" method="post" name="signin"><div id="login"><span>Email Address</span><br><input type="text" name="email" style="width:138px;" size="20" maxlength="50" value=""><br><br><span>Password</span><br><input type="password" name="password" size="20" maxlength="15" style="width:138px;" value=""><br><input type="checkbox" name="remember" value="true" onclick="remBrowser()"><span>Remember&nbsp;password</span><input type="hidden" name="posted" value="Y"><input type="hidden" name="url" value="/PrivacyPolicy.aspx?"><div align="center"><br><input type="submit" value="  Go  "><br><br><a href="/Register.aspx" class="perm"><br>Not a member?<br><b>Join Now!</b></a><br></div></div></form>
 <div align="center">
 <br><br>
-<a id="Header_AdRotatorTower" href="/Track.aspx?method=whitepages_tower&amp;redirect=http%3A%2F%2Fad%2Enz%2Edoubleclick%2Enet%2Fclk%3B24151019%3B12252424%3Bo" target="_top"><img src="/images/banners/whitepages_150x300.gif" alt="Whitepages" border="0"></a>
+<a id="Header_AdRotatorTower" href="/Track.aspx?method=warehouse%5ftower&amp;redirect=http%3A%2F%2Fwww%2Ethewarehouse%2Eco%2Enz" target="_top"><img src="/images/banners/mc_thewarehouse_creditcard_tower.gif" alt="The Warehouse" border="0"></a>
 </div>
 <br><br>
 <img src="/images/1pixel.gif" height="1" width="160" alt="">
