--- a/p/pe/per/perotsystems.com.html
+++ b/p/pe/per/perotsystems.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the perotsystems.com privacy policy that was archived on 2005-12-23.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051223231210id_/http%3A//www.perotsystems.com/privacypolicy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the perotsystems.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615080241id_/http%3A//perotsystems.com/privacypolicy.htm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 <!-- TemplateBeginEditable name="doctitle" -->
@@ -137,7 +137,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
   </tr>
   <tr>
     <td colspan="2" class="small"> Discover how Perot Systems can help you achieve results—contact    us at +1 888 31 PEROT, +1 972 577 0000, or <a href="mailto:results@ps.net">results@ps.net</a>.<br>
-© 1996-2005 Perot Systems. All rights reserved.</td>
+© 1996-2006 Perot Systems. All rights reserved.</td>
   </tr>
 </tbody></table>
 <!-- End /footer.htm --------------------------------- -->
